Day 3/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
           service:
             name: nginx-1
             port:
               number: 80
        - path: /app2
          pathType: Prefix
          backend:
           service:
             name: nginx-2
             port:
               number: 80
